# seo-for-korean-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md
deploy/: seo-for-korean-gateway.service
src/: analyzer.rs  lindera_counter.rs  main.rs
src/analyzer/: ctx.rs  helpers.rs  keyword.rs  mod.rs  types.rs
src/analyzer/checks/: content.rs  images.rs  keywords.rs  links.rs  meta.rs  mod.rs  readability.rs  slug.rs  title.rs
